public/css/hub.css
/**
*
*
*
*
*/

body, html {
    height: 100%;
}

body {
    font-family: 'Montserrat';
    font-weight: 400;
}

header,
main {
    padding-left: 300px;
}

@media only screen and (max-width: 992px) {
    header,
    main {
        padding-left: 0;
    }
}

/*
*
* The Principal div
*   First, second and third collumn
*/

#assembly-title {
    font-weight: bold;
}

#hub {
    height: 100%;
}

#side-nav {
    background-color: #3c3c3c;
    padding: 0;
    height: 100%;
    overflow-x: hidden;
    overflow-y: hidden;
}

.side-nav {
    overflow: hidden;
}

#side-nav-close {
    cursor: pointer;
    width: 91px;
}

#second_column {
    background-color: #FAFAFA;
    border: none;
    padding: 0 !important;
    height: 100%;
}

#third_column {
    padding: 0 !important;
    border: none;    
    background-color: #f7f7f7;
    height: 100%;
}

#second_column_content {
    height: 94%;
    margin-left: 5px;
}

#third_column_content{
    height: 94%;
}

#second_column_content::-webkit-scrollbar-track, third_column_content::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

#second_column_content::-webkit-scrollbar, third_column_content::-webkit-scrollbar
{
	width: 6px;
	background-color: #F5F5F5;
}

#second_column_content::-webkit-scrollbar-thumb, third_column_content::-webkit-scrollbar-thumb
{
	background-color: #000000;
}

#node-content {
    height: 50%;
}


/*
*
* Rhe
*
*/

#selected{
    font-family: 'Montserrat';
    font-weight: 600;
    color: white;
    background-color: #535151;
}

#content-part {
    margin-top: 500px;
}

span.badge {
    color: inherit !important;
}

.material-icons.md-14{
    font-size: 14px;
}

/*
*
*
*
*
*/

.not-a-button{
    background-color: inherit;
    border: none;
    color: grey;
    width: 100%;
    text-align: left;
    text-decoration: none;
    display: block;
    font-size: 14px;
}

.not-a-button:active, .not-a-button:focus{
    background-color: inherit;
}

.not-a-button:hover{
    background-color: #535151;
}

/*
*
*
*
*
*/

.assembly-view{
    background-color: #262626;
    border: none;
    color: grey;
    width: 100%;
    text-align: left;
    text-decoration: none;
    display: block;
    font-size: 16px;
}

.assembly-view:active, .assembly-view:focus{
    background-color: #262626;
}

.data-header{
    background: white;
    color: #4a4a4a;
    font-weight: 600;
    font-size: 14px;
    padding: 16px 0;
    height: 6%;
    box-shadow: 0px 1px 1px 0px;
}

#filesSpecHeader{
    margin: 0px;
}

.data-header-third-column{
    color: #4a4a4a;
    font-weight: 700;
    font-size: 14px;
    /* height: 6%; */
}

.info-right{
    cursor: pointer;
    float: right;
    padding-top: 10px;
}

.favorite{
    padding: 0px 10px 0px 14px;
}

.bl {
    margin-top: 20px;
    background-color: #262626;
    padding-bottom: 80px;
}

.little_name {
    font-size: 60%
}

.coloriage {
    background-color: #262626 !important;
    color: white !important;
}

.username-dropdown{
    font-size: 10px;
    color: #9b9b9b;
    font-weight: 600;
    margin-left: 10px;
}

div#search-and-branch{
    padding:  5px 5px;
}

input[type='text']#search{
    height: 26px;
    box-sizing:  border-box;
    border-bottom-width: 0px;
    border: 0 !important;
    font-size: 11px;
    background-color: #e9e8e9;
    background-image: url('/img/08-Search icon.svg');
    background-size: 11px;
    background-position: 10px 6px;
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
    margin-bottom: 5px;
    box-shadow: none !important;
}

input[type='text']#search:focus{
     border-bottom: none!important;
  box-shadow: none!important;
}

input[type='text']#branch{
    height: 26px;
    border: 0 !important;
    box-sizing:  border-box;
    border-bottom-width: 0px;
    font-size: 11px;
    background-color: #e9e8e9;
    background-image: url('/img/08-Branch icon.svg');
    background-size: 11px;
    background-position: 10px 6px;
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
    margin-bottom: 5px;
    box-shadow: none !important;
}

input[type='text']#branch:focus{
     border-bottom: none!important;
  box-shadow: none!important;
}

.search-input, .branch-input{
    padding-top: 3.5px;
    padding-bottom: 3.5px;
    padding-left: 7px;
    padding-right: 7px;
}

.row{
    margin-bottom: 0px;
}

/*
*
* Modal Modification
*
*/

.modal-body{
    color: black;
}
.modal-header{
    text-align: center;
    margin-top: 2% !important;
}

.files-button {
    color: rgb(161, 160, 160);
    float: right !important;
    background-color: #727171;
    color: #fff;
}
.files-button:hover, .files-button:focus {
    transition: none;
    background-color: #727171;
}
.file-path-wrapper{
    padding-right: 15px;
    padding-left: 0px !important;
}

div.modal-body>p{
    margin: 0;
    padding-top: 10px;
}
.button-form-validate[type=submit]{
    width: 100%;
    margin: 0;
    border: none;
    padding: 20px 0;
    text-align: center;
    height: 100%;
}

.preloader-wrapper.active{
    margin: auto !important;
    padding: 10px !important;
}

.image-right{
    float: right;
    margin-top: 14px;
    padding-right: 10px;
    height: 22px;
    opacity: 0.3;
}

.image-right:hover, .triple-dots:hover{
    opacity: 0.6;
    cursor: pointer;
}

.image-right.active, .triple-dots.active{
    opacity: 1
}

p{
    margin: 0px;
}
.node-selector{
    padding-top: 1%;
    font-size: 16px;
    font-weight: 800;
}

.breadcrumb:hover {
    cursor: pointer;
    background-color: #f5f5f5;
}

.breadcrumb:last-child{
    color:#9b9b9b;
    font-size: 11px;
}

.disabled-link {
    pointer-events: none;
    opacity:0.6;
}

.upload_button:hover {
    background-color: #4a4a4a !important;
}

.upload_button {
    background-color: #9b9b9b !important;
}

.modal { 
    width: 35%; 
}

.clear {
    clear: both;
}

a.dropdown-menu{
    font-family: 'Montserrat';
    font-weight: 400 !important;
    font-size: 12px !important;
    color: #4a4a4a !important;
    margin: 5px;
    padding-top:0px !important;
    padding-bottom:0px !important;
}

a.dropdown-menu:hover{
    background-color: #4885ed;
    color: white !important;
    cursor: pointer;
}

li.option-node{
    min-height: 0px;
}
li.option-node:hover{
    background-color: initial !important;
}

div#location{
    margin: 0;
    padding: 10px 0;
}

div#content{
    padding: 10px 0;
}

/*div#content:hover, div#location:hover{
    background-color: rgb(194, 189, 189);
}*/

div.collapsible-body  ul {
    margin: 0;
}

.user-image {
    height: 14px;
    width: 14px;
}

.maturity-cube{
    display: inline-block;
    height: 14px;
    width: 14px;
    border-radius: 2px;
    border: black 1px solid;
}

.viewHover {
    background-color: #F8F8F8;
}

.viewNotHover {
    background-color: white;
}

.viewClicked {
    background-color: #E6E6E6;
}

.view:hover {
    cursor: pointer;
}

.view {
    border-top: #E6E6E6 solid 1px;
}

.view h5 {
    font-weight: bold !important;
}

.view .row {
    margin-top: 2%;
}

#location p, #content p {
    font-size: 11px;
}

#location h5, #content h5 {
    font-size: 14px;
}

.collection-item-workspace {
    background-color: inherit !important;
    border: none !important;
    padding: 5% !important;
}

.collection-item-workspace:hover {
    /* background-color: #535151 !important;  */
}

.collection {
    border: none !important;
}

#list-workspace{
    max-height: 100%;
    overflow-x: hidden;
    margin: 0;
    overflow-y: scroll;
    height: 100%;
    width: 100%;
}

.circle-responsive-active {
    background: #00FFC8;
    border-radius: 50%;
    padding-bottom: 100%;
    width: 100%;
    height: 0;
    box-shadow: 0 0 0 3px #1E987E;
}

.circle-responsive {
    background: #9B9B9B;
    border-radius: 50%;
    height: 0;
    padding-bottom: 100%;
    width: 100%;
}

.circle-responsive:hover {
    background: #8EDACA;
}

.circle-responsive-active:hover {
    box-shadow: 0 0 0 3px #1E987E;
}

.circle-content {
    color: #ffffff;
    float: left;
    line-height: 1;
    font-size: 14px;
    margin-top: -0.5em;
    padding-top: 50%;
    text-align: center;
    width: 100%;
    font-weight: 600;
}

.circle-responsive-add {
    background: #9B9B9B;
    border-radius: 50%;
    height: 0;
    padding-bottom: 100%;
    width: 100%;
}

.circle-responsive-add:hover {
    background: #F0F0F0;
}

.circle-responsive-add:hover .circle-content{
    color: #000000;
}

.collection-manager{
    box-sizing: unset;
}

.pref-option{
    position: relative !important;
    top: 100px !important;
}

.add-workspace{
    width: 100%;
    height: 10px;
}

.workspaces-title {
    font-weight: 800;
    white-space:nowrap;
}

.arrow_drop_down {
    font-size: 29px;
    vertical-align: middle;
    margin-bottom: 4px;
}

.add-content-icon {
    height: 17px;
    vertical-align: middle;
}

#main-panel{
    max-height: 100%;
    padding-left: 0.25rem;
}

#file-name {
    vertical-align: text-top;
    margin-right: 10px;
}

.native_icon {
    vertical-align: middle;
    margin-right: 10px;
    height: 10px;
}

.format {
    font-size: 12px;
    color:#C2C2C2;
}

.title-modal {
    font-size: 18px;
    font-weight: 600;
}

li.collection-item.information-detail {
    border: none;
    font-weight: 600;
    color: #A1A1A1;
}

#info-name, #info-description,
#info-creation,
#info-creator, #info-owner {
    float: none;
    color:#616161;
    font-weight: 600;
} 

.title-side {
    font-size: 14px;
    font-weight: 800;
    text-transform: capitalize;
}

#side-info {
    background-color: #FAFAFA;
}

ul#details-tab {
    background-color: #FAFAFA;
}

@media screen and (max-width: 600px) {
    #second_column {
        min-height: 227px;
        height: auto;
        width: 100%;
    }
    
    #third_column {
        width: 100%;
    }

    #list-workspace {
        overflow-y: auto;
        max-height: 500px;
    }
    #side-nav {
        height: 100%;
    }
    .modal{
        width: 80%;
        max-height: 100%;
    }
}

#details {
    margin: 36px;
    font-size: 13px;
}

#details tr td {
    padding: 0px;
    line-height: 37px;
    font-weight: 700;
    color: #A3A3A3;
}

.header-background {
    background-color: #FAFAFA;
}

.text-file-style {
    font-weight: 600;
    font-size: 12px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    width: 76%;
    display: inline-block;
}

@media screen and (min-width: 0px) and (max-width: 600px){ 
    #second_column {
        width: 100%;
        height: 40%;
    }

    #third_column {
        height: 60%;
        width: 100%;
    }

    .collapsible-first{
        max-height: 200px !important;
    }
    
    #specs-collection{
        max-height: 100px !important;        
    }

    #list-workspace {
        overflow-y: auto;
        max-height: 500px;
    }

    #side-nav {
        overflow: hidden;
        max-height: 500px;
    }

    #side-nav {
        width:75px;
        height: 100%;
    }
    .modal{
        width: 80%;
        max-height: 100%;
    }
}

@media screen and (min-width: 992px) and (max-width: 1200px){
    #second_column {
        width: 27%;
    }
    
    #third_column {
        width: 73%;
    }
   
}

